write section events and adaptive

--- a/index.html
+++ b/index.html
@@ -849,6 +849,22 @@
         <h2 class="events__title title">
           События
         </h2>
+        <div class="events__buttons">
+          <div class="events__btn evetns__btn--prev swiper-button-prev">
+            <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 2.72191e-06C38.8071 2.11838e-06 50 11.1929 50 25C50 38.8071 38.8071 50 25 50C11.1929 50 -4.89256e-07 38.8071 -1.09278e-06 25C-1.69631e-06 11.1929 11.1929 3.32544e-06 25 2.72191e-06Z" fill="#ECECEC"/>
+              <path d="M25 2.72191e-06C38.8071 2.11838e-06 50 11.1929 50 25C50 38.8071 38.8071 50 25 50C11.1929 50 -4.89256e-07 38.8071 -1.09278e-06 25C-1.69631e-06 11.1929 11.1929 3.32544e-06 25 2.72191e-06Z"/>
+              <path d="M23.3333 16.6667L31.6667 25L23.3333 33.3333" stroke="black"/>
+            </svg>
+          </div>
+          <div class="events__btn evetns__btn--next swiper-button-next">
+            <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 2.72191e-06C38.8071 2.11838e-06 50 11.1929 50 25C50 38.8071 38.8071 50 25 50C11.1929 50 -4.89256e-07 38.8071 -1.09278e-06 25C-1.69631e-06 11.1929 11.1929 3.32544e-06 25 2.72191e-06Z" fill="#ECECEC"/>
+              <path d="M25 2.72191e-06C38.8071 2.11838e-06 50 11.1929 50 25C50 38.8071 38.8071 50 25 50C11.1929 50 -4.89256e-07 38.8071 -1.09278e-06 25C-1.69631e-06 11.1929 11.1929 3.32544e-06 25 2.72191e-06Z"/>
+              <path d="M23.3333 16.6667L31.6667 25L23.3333 33.3333" stroke="black"/>
+            </svg>
+          </div>
+        </div>
         <div class="events__swiper swiper">
           <ul class="events__wrapper swiper-wrapper flex">
             <li class="events-slide swiper-slide">
@@ -972,8 +988,7 @@
               </article>
             </li>
           </ul>
-          <div class="events__btn evetns__btn--prev swiper-button-prev"></div>
-          <div class="events__btn evetns__btn--next swiper-button-next"></div>
+          <div class="swiper-pagination"></div>
         </div>
       </div>
     </section>
