added pagination bullets

--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@
               </article>
             </li>
           </ul>
-          <div class="swiper-pagination"></div>
+          <div class="events__pagination swiper-pagination"></div>
         </div>
       </div>
     </section>
