--- a/index.html
+++ b/index.html
@@ -992,10 +992,111 @@
         </div>
       </div>
     </section>
+    <section class="projects offset">
+      <div class="container projects__container">
+        <h2 class="projects__title title">
+          Проекты
+        </h2>
+        <p class="projects__description description">
+          Предварительные выводы: постоянное информационно-пропагандистское обеспечение нашей деятельности однозначно фиксирует необходимость своевременного выполнения сверхзадачи. А&nbsp;ещё независимые государства смешаны с&nbsp;не&nbsp;уникальными данными до&nbsp;степени совершённой неузнаваемости, из-за чего возрастает их&nbsp;статус бесполезности. Прежде всего, постоянное информационно-пропагандистское
+          <button id="tooltip-one" class="projects__tooltip-btn btn-reset" data-theme="purple">
+            <svg class="tooltip-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="tooltip-stroke" d="M15.5 8C15.5 12.1421 12.1421 15.5 8 15.5C3.85786 15.5 0.5 12.1421 0.5 8C0.5 3.85786 3.85786 0.5 8 0.5C12.1421 0.5 15.5 3.85786 15.5 8Z"/>
+            <path class="tooltip-symbol" d="M7.26154 6.4551H8.73846V13H7.26154V6.4551ZM8 4.90259C7.71282 4.90259 7.4718 4.81126 7.27692 4.62861C7.09231 4.44597 7 4.22273 7 3.9589C7 3.69508 7.09231 3.47184 7.27692 3.28919C7.4718 3.0964 7.71282 3 8 3C8.28718 3 8.52308 3.09132 8.70769 3.27397C8.90256 3.44647 9 3.66464 9 3.92846C9 4.20243 8.90256 4.43582 8.70769 4.62861C8.52308 4.81126 8.28718 4.90259 8 4.90259Z"/>
+            </svg>
+          </button>
+          обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений. И&nbsp;нет сомнений, что действия представителей оппозиции могут быть рассмотрены
+          <button id="tooltip-two" class="projects__tooltip-btn btn-reset" data-theme="purple">
+            <svg class="tooltip-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="tooltip-stroke" d="M15.5 8C15.5 12.1421 12.1421 15.5 8 15.5C3.85786 15.5 0.5 12.1421 0.5 8C0.5 3.85786 3.85786 0.5 8 0.5C12.1421 0.5 15.5 3.85786 15.5 8Z"/>
+            <path class="tooltip-symbol" d="M7.26154 6.4551H8.73846V13H7.26154V6.4551ZM8 4.90259C7.71282 4.90259 7.4718 4.81126 7.27692 4.62861C7.09231 4.44597 7 4.22273 7 3.9589C7 3.69508 7.09231 3.47184 7.27692 3.28919C7.4718 3.0964 7.71282 3 8 3C8.28718 3 8.52308 3.09132 8.70769 3.27397C8.90256 3.44647 9 3.66464 9 3.92846C9 4.20243 8.90256 4.43582 8.70769 4.62861C8.52308 4.81126 8.28718 4.90259 8 4.90259Z"/>
+            </svg>
+          </button>
+          исключительно в&nbsp;разрезе маркетинговых и&nbsp;финансовых
+          <button id="tooltip-three" class="projects__tooltip-btn btn-reset" data-theme="purple">
+            <svg class="tooltip-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="tooltip-stroke" d="M15.5 8C15.5 12.1421 12.1421 15.5 8 15.5C3.85786 15.5 0.5 12.1421 0.5 8C0.5 3.85786 3.85786 0.5 8 0.5C12.1421 0.5 15.5 3.85786 15.5 8Z"/>
+            <path class="tooltip-symbol" d="M7.26154 6.4551H8.73846V13H7.26154V6.4551ZM8 4.90259C7.71282 4.90259 7.4718 4.81126 7.27692 4.62861C7.09231 4.44597 7 4.22273 7 3.9589C7 3.69508 7.09231 3.47184 7.27692 3.28919C7.4718 3.0964 7.71282 3 8 3C8.28718 3 8.52308 3.09132 8.70769 3.27397C8.90256 3.44647 9 3.66464 9 3.92846C9 4.20243 8.90256 4.43582 8.70769 4.62861C8.52308 4.81126 8.28718 4.90259 8 4.90259Z"/>
+            </svg>
+          </button>
+          предпосылок. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также представители современных социальных резервов призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть смешаны с&nbsp;не&nbsp;уникальными данными до&nbsp;степени совершённой неузнаваемости. Подробнее: <a href="#" class="projects__link">blanchard-art.ru/projects</a>
+        </p>
+        <h3 class="projects__subtitle title">
+          Партнёры проектов:
+        </h3>
+        <div class="projects__swiper swiper">
+          <div class="projects__buttons">
+            <div class="projects__btn projects__btn--prev swiper-button-prev">
+              <svg class="projects__icon" width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M15 30C6.71573 30 8.89561e-07 23.2843 1.25168e-06 15C1.61379e-06 6.71573 6.71573 -1.01779e-06 15 -6.55671e-07C23.2843 -2.93554e-07 30 6.71573 30 15C30 23.2843 23.2843 30 15 30Z" fill="#ECECEC"/>
+                <path d="M15 30C6.71573 30 8.89561e-07 23.2843 1.25168e-06 15C1.61379e-06 6.71573 6.71573 -1.01779e-06 15 -6.55671e-07C23.2843 -2.93554e-07 30 6.71573 30 15C30 23.2843 23.2843 30 15 30Z"/>
+                <path d="M16 20L11 15L16 10" stroke="black"/>
+              </svg>
+            </div>
+            <div class="projects__btn projects__btn--next swiper-button-next">
+              <svg class="projects__icon" width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M15 30C6.71573 30 8.89561e-07 23.2843 1.25168e-06 15C1.61379e-06 6.71573 6.71573 -1.01779e-06 15 -6.55671e-07C23.2843 -2.93554e-07 30 6.71573 30 15C30 23.2843 23.2843 30 15 30Z" fill="#ECECEC"/>
+                <path d="M15 30C6.71573 30 8.89561e-07 23.2843 1.25168e-06 15C1.61379e-06 6.71573 6.71573 -1.01779e-06 15 -6.55671e-07C23.2843 -2.93554e-07 30 6.71573 30 15C30 23.2843 23.2843 30 15 30Z"/>
+                <path d="M16 20L11 15L16 10" stroke="black"/>
+              </svg>
+            </div>
+          </div>
+          <div class="projects__wrapper swiper-wrapper">
+            <div class="projects__slider swiper-slide">
+              <a href="#" class="projects__link-img">
+                <img src="./img/projects/project-1.png" alt="Изображения" class="projects__img">
+              </a>
+            </div>
+            <div class="projects__slider swiper-slide">
+              <a href="#" class="projects__link-img">
+                <img src="./img/projects/project-2.png" alt="Изображения" class="projects__img">
+              </a>
+            </div>
+            <div class="projects__slider swiper-slide">
+              <a href="#" class="projects__link-img">
+                <img src="./img/projects/project-3.png" alt="Изображения" class="projects__img">
+              </a>
+            </div>
+            <div class="projects__slider swiper-slide">
+              <a href="#" class="projects__link-img">
+                <img src="./img/projects/project-4.png" alt="Изображения" class="projects__img">
+              </a>
+            </div>
+            <div class="projects__slider swiper-slide">
+              <a href="#" class="projects__link-img">
+                <img src="./img/projects/project-5.png" alt="Изображения" class="projects__img">
+              </a>
+            </div>
+            <div class="projects__slider swiper-slide">
+              <a href="#" class="projects__link-img">
+                <img src="./img/projects/project-6.png" alt="Изображения" class="projects__img">
+              </a>
+            </div>
+            <div class="projects__slider swiper-slide">
+              <a href="#" class="projects__link-img">
+                <img src="./img/projects/project-7.png" alt="Изображения" class="projects__img">
+              </a>
+            </div>
+            <div class="projects__slider swiper-slide">
+              <a href="#" class="projects__link-img">
+                <img src="./img/projects/project-8.png" alt="Изображения" class="projects__img">
+              </a>
+            </div>
+            <div class="projects__slider swiper-slide">
+              <a href="#" class="projects__link-img">
+                <img src="./img/projects/project-9.png" alt="Изображения" class="projects__img">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
 
   </footer>
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://unpkg.com/tippy.js@6"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
   <script src="./libs/choices.min.js"></script>
@@ -1007,5 +1108,6 @@
   <script src="./js/search-btn.js"></script>
   <script src="./js/dropdown.js"></script>
   <script src="./js/tabs.js"></script>
+  <script src="./js/tooltips.js"></script>
 </body>
 </html>
