added section application

--- a/index.html
+++ b/index.html
@@ -1091,6 +1091,11 @@
         </div>
       </div>
     </section>
+    <section class="application offset">
+      <div class="container application__container">
+
+      </div>
+    </section>
   </main>
   <footer class="footer">
 
