--- a/index.html
+++ b/index.html
@@ -1163,11 +1163,14 @@
         </div>
       </div>
     </section>
+    <section class="yandex-map">
+      <div id="map" class="yandex__map"></div>
+    </section>
   </main>
   <footer class="footer">
 
   </footer>
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=2334e2dc-a928-4c00-9744-3d14faf742d5&lang=ru_RU"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript"></script>
   <script src="https://unpkg.com/@popperjs/core@2"></script>
   <script src="https://unpkg.com/tippy.js@6"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
