added smopth scrolling for page

--- a/index.html
+++ b/index.html
@@ -63,32 +63,32 @@
         <nav class="header__nav">
           <ul class="header__list flex">
             <li class="header__item">
-              <a href="#about" class="header__link">
+              <a href="#" class="header__link" data-goto=".about">
                 О нас
               </a>
             </li>
             <li class="header__item">
-              <a href="#" class="header__link">
+              <a href="#" class="header__link" data-goto=".gallery">
                 Галерея
               </a>
             </li>
             <li class="header__item">
-              <a href="#" class="header__link">
+              <a href="#" class="header__link" data-goto=".catalog">
                 Каталог
               </a>
             </li>
             <li class="header__item">
-              <a href="#" class="header__link">
+              <a href="#" class="header__link" data-goto=".events">
                 События
               </a>
             </li>
             <li class="header__item">
-              <a href="#" class="header__link">
+              <a href="#" class="header__link" data-goto=".projects">
                 Проекты
               </a>
             </li>
             <li class="header__item">
-              <a href="#" class="header__link">
+              <a href="#" class="header__link" data-goto=".contacts">
                 Контакты
               </a>
             </li>
@@ -1234,6 +1234,7 @@
   <script src="./js/choices-plugin.js"></script>
   <script src="./js/accordion.js"></script>
   <script src="./js/swiperScripts.js"></script>
+  <script src="./js/smooth-scrolling.js"></script>
   <script src="./js/burger-menu.js"></script>
   <script src="./js/search-btn.js"></script>
   <script src="./js/dropdown.js"></script>
