pixel prefect 768px and 320px

--- a/index.html
+++ b/index.html
@@ -523,128 +523,133 @@
                   </button>
                 </div>
                 <div class="accordion__bottom ac-panel">
-                  <ul class="accordion__persons-list">
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset" data-path="one">
-                        Бенедетто ди Биндо
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset" data-path="mask">
-                        Бергоньоне, Амброджо
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Биссоло, Франческо
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Больтраффио, Джованни
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Бонсиньори, Франческо
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Боттичини, Рафаэлло
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Брамантино
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Бреа, Людовико
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Бьяджо д’Антонио Туччи
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Веккьетта
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Андреа Верроккьо
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person accordion__btn-person--active btn-reset" data-path="two">
-                        Доменико Гирландайо
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Беноццо Гоццоли
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Граначчи, Франческо
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Грегорио ди Чекко
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Джованни да Удине
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Джованни ди Паоло
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Джорджоне
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Парентино, Бернардо
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Пезеллино
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Пьетро Перуджино
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Перуцци, Бальдассаре
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Пизанелло
-                      </button>
-                    </li>
-                    <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
-                        Пинтуриккьо
-                      </button>
-                    </li>
-
+                  <ul class="accordion__persons-list flex">
+                    <div class="accordion__persons-left">
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset" data-path="one">
+                          Бенедетто ди Биндо
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset" data-path="mask">
+                          Бергоньоне, Амброджо
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Биссоло, Франческо
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Больтраффио, Джованни
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Бонсиньори, Франческо
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Боттичини, Рафаэлло
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Брамантино
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Бреа, Людовико
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Бьяджо д’Антонио Туччи
+                        </button>
+                      </li>
+                    </div>
+                    <div class="accordion__persons-center">
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Веккьетта
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Андреа Верроккьо
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person accordion__btn-person--active btn-reset" data-path="two">
+                          Доменико Гирландайо
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Беноццо Гоццоли
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Граначчи, Франческо
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Грегорио ди Чекко
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Джованни да Удине
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Джованни ди Паоло
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Джорджоне
+                        </button>
+                      </li>
+                    </div>
+                    <div class="accordion__persons-rigth">
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Парентино, Бернардо
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Пезеллино
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Пьетро Перуджино
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Перуцци, Бальдассаре
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Пизанелло
+                        </button>
+                      </li>
+                      <li class="accordion__persons-item">
+                        <button class="accordion__btn-person btn-reset">
+                          Пинтуриккьо
+                        </button>
+                      </li>
+                    </div>
                   </ul>
                 </div>
               </li>
