--- a/index.html
+++ b/index.html
@@ -377,20 +377,20 @@
               <label class="checkbox-period__block" for="checkbox-19">
                 <input class="checkbox-reset checkbox-period__gallery checkbox-period__19" type="checkbox"
                   name="checkbox" id="checkbox-19">
-                XIX век
-                <span></span>
+                  <span class="checkbox__text">XIX век</span>
+                <span class="checkbox__square"></span>
               </label>
               <label class="checkbox-period__block" for="checkbox-20">
                 <input class="checkbox-reset checkbox-period__gallery checkbox-period__20" type="checkbox"
                   name="checkbox" id="checkbox-20">
-                XX век
-                <span></span>
+                  <span class="checkbox__text">XX век</span>
+                <span class="checkbox__square"></span>
               </label>
               <label class="checkbox-period__block" for="checkbox-21">
                 <input class="checkbox-reset checkbox-period__gallery checkbox-period__21" type="checkbox"
                   name="checkbox" id="checkbox-21">
-                Современность
-                <span></span>
+                  <span class="checkbox__text">Современность</span>
+                <span class="checkbox__square"></span>
               </label>
             </form>
           </div>
